--- a/config/crd/bases/opentelemetry.io_instrumentations.yaml
+++ b/config/crd/bases/opentelemetry.io_instrumentations.yaml
@@ -891,7 +891,19 @@ spec:
                     type: array
                   extensions:
                     description: Extensions defines java specific extensions.
-                    type: string
+                    properties:
+                      dir:
+                        description: Dir is a directory with extensions auto-instrumentation
+                          JAR.
+                        type: string
+                      image:
+                        description: Image is a container image with extensions auto-instrumentation
+                          JAR.
+                        type: string
+                    required:
+                    - dir
+                    - image
+                    type: object
                   image:
                     description: Image is a container image with javaagent auto-instrumentation
                       JAR.
